--- a/src/app/components/course/CourseSearch/courseSearchResult.module.css
+++ b/src/app/components/course/CourseSearch/courseSearchResult.module.css
@@ -5,6 +5,7 @@
   gap: 24px 48px;
   max-width: 100%;
   flex: 1 1 auto;
+  align-items: stretch;
   align-content: flex-start;
 }
 
