--- a/src/app/components/endorsedProviders/endorsedProviders.module.css
+++ b/src/app/components/endorsedProviders/endorsedProviders.module.css
@@ -60,8 +60,9 @@
 }
 
 .cardsRowSingle > * {
-  width: 20%;
-  max-width: 20%;
+  width: 20vw;
+  max-width: 360px;
+  min-width: 220px;
   flex: 0 0 auto;
 }
 
@@ -93,6 +94,12 @@
   }
 
   .cardsRowTwo > * {
+    width: 100%;
+    min-width: 0;
+    max-width: 100%;
+  }
+
+  .cardsRowSingle > * {
     width: 100%;
     min-width: 0;
     max-width: 100%;
